<resources>
    <string name="app_xiaoli_name">小鲤智能</string>
    <string name="app_lingshou_name">水族之家</string>
    <string name="app_pondteam_name">PondTeam</string>
    <string name="app_pondlink_name">PondLink</string>
    <string name="app_yihu_name">宜虎</string>
    <string name="add_new_device">添加新设备</string>
    <string name="MondayQ">Monday</string>
    <string name="TuesdayQ">Tuesday</string>
    <string name="WednesdayQ">Wednesday</string>
    <string name="ThursdayQ">Thursday</string>
    <string name="FridayQ">Friday</string>
    <string name="SaturdayQ">Saturday</string>
    <string name="SundayQ">Sunday</string>
    <string name="sensenshuizu">森森水族智能监控系统</string>
    <string name="bianpinshuibeng">变频水泵</string>
    <string name="device_yuancheng_ph">远程PH温度探测仪</string>
    <string name="jiarebang">加热棒</string>
    <string name="paichu">请排除</string>
    <string name="updateing_description">正在下载中，请勿切断电源，固件更新完成，设备将自动重新启动</string>
    <string name="version">版本:</string>
    <string name="update_desciption">更新描述:</string>
    <string name="hasupdate">已有最新固件</string>
    <string name="current_version">当前版本：</string>
    <string name="dingshimoshi">定时模式</string>
    <string name="chazuoA_closetime">定时关闭时间</string>
    <string name="add_weishi">添加喂食次数</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="update_success">修改成功</string>
    <string name="insert_success">插入成功</string>
    <string name="insert_fail">插入失敗</string>
    <string name="unbind_device">解除绑定</string>
    <string name="makesure_unbind_device">确定解除绑定？</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="mode_selection">模式选择</string>
    <string name="myadvice">我的设备列表</string>
    <string name="add_device">添加设备</string>
    <string name="next">下一步</string>
    <string name="current_wifiname">当前wi-fi</string>
    <string name="current_wifipass">wi-fi密码</string>
    <string name="search_device">搜索设备</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="xingqi">星期</string>
    <string name="moshi">模式切换</string>
    <string name="light_zhaoming">灯光照明</string>
    <string name="light_shajun">杀菌灯</string>
    <string name="chonglangbeng">冲浪泵</string>
    <string name="wendushezhi">周期设置</string>
    <string name="shipinguankan">视频设置</string>
    <string name="shuizhisuanjianqushi">水质酸碱度走势</string>
    <string name="shuiwei_warn">水位报警设定</string>
    <string name="shebei_lock">设备锁定</string>
    <string name="user_name">手机号码</string>
    <string name="pass_word">密码</string>
    <string name="sign_in">登录</string>
    <string name="register">新用户注册</string>
    <string name="sign_top">Smart of pondteam</string>
    <string name="e_mail_address">邮箱地址</string>
    <string name="sign_password">登录密码</string>
    <string name="user_name_register">用户昵称</string>
    <string name="address_information">地址信息</string>
    <string name="cantact_number">手机号</string>
    <string name="determine">确定</string>
    <string name="deviceid">设备ID</string>
    <string name="pipei">匹配</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="shoudong">手动清洗</string>
    <string name="zidongqingxi">定时清洗</string>
    <string name="last_clean_time">上次清洗时间:</string>
    <string name="next_clean_time">下次清洗时间：</string>
    <string name="touch_long">长按备用插座可以重命名</string>
    <string name="update_device">修改设备名称</string>
    <string name="delete_device">删除设备</string>
    <string name="UVLANMP">UV LANMP</string>
    <string name="shajundeng">杀菌灯已累计使用</string>
    <string name="shajundeng_open_time">杀菌灯开启时间</string>
    <string name="shajundeng_close_time">杀菌灯关闭时间</string>
    <string name="qingling">累计使用时间清零</string>
    <string name="genghuanweihu_tishi">更换维护提示</string>
    <string name="yichangbaojing">异常报警</string>
    <string name="shebei_will">设备将在</string>
    <string name="zhouqi">周期设定</string>
    <string name="shijian_setting">时间设定</string>
    <string name="qingxi_tishi">清洗提示</string>
    <string name="single_setting">单次清洗时间设置</string>
    <string name="username_empty">用户名或者密码为空</string>
    <string name="user_empty">用户名为空</string>
    <string name="pass_empty">密码为空</string>
    <string name="yzm_empty">验证码为空</string>
    <string name="login_success">登录成功</string>
    <string name="email_empty">邮箱为空</string>
    <string name="password_empty">登录密码为空</string>
    <string name="newuser_register">新用户注册</string>
    <string name="open_time">开启时间每天：</string>
    <string name="total_time">累计使用时间：</string>
    <string name="beiyongchazuoA">备用插座A</string>
    <string name="current_power">当前输出功率</string>
    <string name="total_power">总功率</string>
    <string name="beiyongchazuoB">备用插座B</string>
    <string name="deviceid_empty">设备ID为空</string>
    <string name="dingshi">定时自动清洗功能：</string>
    <string name="open">已开启</string>
    <string name="close">已关闭</string>
    <string name="per_hour">每次清洗时间%1$d分钟</string>
    <string name="tishi">杀菌灯的使用寿命一般为8000小时</string>
    <string name="hour">小时</string>
    <string name="current_status">当前状态:</string>
    <string name="prepare_washing">准备清洗</string>
    <string name="washing">清洗中</string>
    <string name="pause_washing">暂停清洗</string>
    <string name="stop_washing">停止清洗</string>
    <string name="finish_washing">清洗完毕</string>
    <string name="once_again_wash">再次清洗</string>
    <string name="minute">分钟</string>
    <string name="device_list">我的设备列表</string>
    <string name="choose_single_washtime">单次清洗时间设置</string>
    <string name="tips">提示信息</string>
    <string name="make_sure_delete">确认删除当前设备?</string>
    <string name="device_name_empty">名称为空</string>
    <string name="settime">时间设定</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="forget_pass_title">忘记密码</string>
    <string name="yanzhengma">验证码</string>
    <string name="get_yam">获取验证码</string>
    <string name="make_sure_password">确认密码</string>
    <string name="different_password">两次密码不一致</string>
    <string name="email">邮箱</string>
    <string name="unlogin">未登录</string>
    <string name="no_add_device">对不起，您暂时还没有添加设备!</string>
    <string name="Year">Y</string>
    <string name="Month">M</string>
    <string name="Day">D</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="update_chazuoA">修改插座A名称</string>
    <string name="update_chazuoB">修改插座B名称</string>
    <string name="alert">提示信息</string>
    <string name="make_sure_exit">确定退出登录?</string>
    <string name="click">点击</string>
    <string name="tips_detail">添加设备,此时你需要将设备放置于良好的WIFI环境下,让你的设备能够准确的识别WIFI系统</string>
    <string name="device_add">设备添加</string>
    <string name="device_register">设备注册中...</string>
    <string name="tips_adddevice"><Data><![CDATA[接通电源，长按设备匹配键5秒<br/>松手至绿色指示灯快闪状态]]></Data></string>
    <string name="disconnect">设备连接已断开</string>
    <string name="getDetail_fail">获取设备信息失败</string>
    <string name="deviceid_error">当前设备有误，不能进行下一步</string>
    <string name="wancheng">完成</string>
    <string name="register_success">设备注册成功</string>
    <string name="has">当前设备已存在</string>
    <string name="hasA">已添加</string>
    <string name="chazuo">插座</string>
    <string name="gujiangengxin">检查固件升级</string>
    <string name="update">点击下载更新</string>
    <string name="is_save">是否保存当前设置？</string>
    <string name="update_finish">更新完成</string>
    <string name="update_fail">更新失败</string>
    <string name="zidong">后进行自动清洗！</string>
    <string name="submit">确定</string>
    <string name="days">天</string>
    <string name="seconds">秒</string>
    <string name="xieyi">谢谢你购买Pondteam BioClear汽车®过滤器。请按照手册和安装过滤器完成注册在以下页面。我们建议您填写的所有信息,你现在方便后购买,那么你将很容易获得。任何信息将默认共享。我们只使用你的电子邮件警报、产品更新,建议当地维修条件。你将会对你的个人要求进一步选择。作为一个安全你过滤只能从你当地的家庭网络,远程访问是可能的在您的个人状态页面监督。请确认您已阅读并接受我们的条件继续。点击条件页面链接。</string>
    <string name="wenxin">温馨提示</string>
    <string name="zidongqingxi_title">定时清洗</string>
    <string name="tips2">清洗通知将会发送到你的邮箱</string>
    <string name="logining">正在登录中，请稍后。。。</string>
    <string name="socket_a">standby socket A</string>
    <string name="socket_b">standby socket B</string>
    <string name="no_active">已关闭</string>
    <string name="active">已开启</string>
    <string name="posting">数据请求中,请稍后...</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="already_most_new">当前已经是最新!</string>
    <string name="update_ing">正在更新中, 请稍后</string>
    <string name="Firmware_update">固件更新</string>
    <string name="research">重新搜索</string>
    <string name="device">设备</string>
    <string name="exist_login">退出登录</string>
    <string name="guolvtong">PondTeam</string>
    <string name="wentifankui">问题反馈</string>
    <string name="refreshing">刷新中...</string>
    <string name="validate_fail">验证失败</string>
    <string name="cleabytimer">自动清洗</string>
    <string name="not_time">你还没有设置时间</string>
    <string name="hasAdd">已经添加过了！</string>
    <string name="smartconfig_finish">一键配置完成,正在搜索设备中</string>
    <string name="clean">后进行清洗</string>
    <string name="yanzhenging">验证中, 请稍后</string>
    <string name="peizhiing">一键配置中</string>
    <string name="problem">设备故障</string>
    <string name="make_sure_qingling">确定清零 ?</string>
    <string name="readytoclean">准备清洗</string>
    <string name="configuration_pond">一键配置</string>
    <string name="LAN_pond">添加局域网设备</string>
    <string name="manually_pond">手动添加设备</string>
    <string name="search_success">搜索设备成功</string>
    <string name="LAN_DEVICE">局域网设备</string>
    <string name="lan_tips">请在设备列表连接</string>
    <string name="make_sure_adddevice">确认添加设备?</string>
    <string name="alreayAdd">已添加</string>
    <string name="unAdd">未添加</string>
    <string name="add_params">添加设备的参数</string>
    <string name="devicenaming">设备命名</string>
    <string name="device_psw">密码</string>
    <string name="psw_name_empty">密码为空</string>
    <string name="get_device_status_success">获取设备信息成功</string>
    <string name="get_deviceInfoing">正在获取设备信息,请稍后...</string>
    <string name="adding">添加设备中...</string>
    <string name="addfinsh">添加设备完成</string>
    <string name="registering">连接设备中...</string>
    <string name="registerfinsh">设备注册完成</string>
    <string name="searching">搜索设备</string>
    <string name="searchfinsh">搜索设备完成</string>
    <string name="smartconfiging"></string>
    <string name="get_configing">一键配置完成, 请稍后...</string>
    <string name="timeout">配置超时</string>
    <string name="configuration_stop">配置已经停止</string>
    <string name="find_new_device">发现新设备</string>
    <string name="dianyuankaiguan">电源开关</string>
    <string name="chazuoA_opentime">定时开启时间</string>
    <string name="weishimoshi">喂食模式</string>
    <string name="rename">重命名</string>
    <string name="display_pass">显示密码</string>
    <string name="deviceAdded">已添加设备</string>
    <string name="LANDEVICE">局域网设备</string>
    <string name="hasU">未添加</string>
    <string name="ConfirmWIFI">确认家庭WI-Fi</string>
    <string name="juyuwangdevice">添加局域网设备</string>
    <string name="hand">手动添加设备</string>
    <string name="params">被添加设备参数</string>
    <string name="device_did">设备DID</string>
    <string name="devicepwd">设备密码</string>
    <string name="nickname">设备命名</string>
    <string name="alOpen">开启</string>
    <string name="alClose">关闭</string>
    <string name="gonglv">功率:</string>
    <string name="shebeishiduan">设备时段设置</string>
    <string name="run_error">运行异常</string>
    <string name="run_normal">运行正常</string>
    <string name="mode_zidong">自动模式</string>
    <string name="mode_shoudong_open">手动模式-开</string>
    <string name="mode_shoudong_close">手动模式-关</string>
    <string name="add_new_weishi">新增喂食</string>
    <string name="choose_xilie">选择系列</string>
</resources>