<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt_shoudong_open"
        android:text="@string/mode_shoudong_open"
        android:padding="@dimen/DIMEN_10DP"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/dividing_light"
        android:layout_height="@dimen/DIMEN_1DP"></View>
    <TextView
        android:id="@+id/txt_shoudong_close"
        android:text="@string/mode_shoudong_close"
        android:padding="@dimen/DIMEN_10DP"
        android:gravity="center"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/dividing_light"
        android:layout_height="@dimen/DIMEN_1DP"></View>
    <TextView
        android:id="@+id/txt_auto"
        android:text="@string/mode_zidong"
        android:gravity="center"
        android:padding="@dimen/DIMEN_10DP"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
