<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aigestudio="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/DIMEN_10DP">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/re_wheelpicker"
        android:background="@color/white"
        android:padding="@dimen/DIMEN_10DP">

        <TextView
            android:id="@+id/txt_left"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/DIMEN_18DP"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/txt_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_xilie"
            android:textSize="@dimen/DIMEN_18DP"
            android:textColor="@color/main_yellow" />

        <TextView
            android:id="@+id/txt_right"
            android:textSize="@dimen/DIMEN_18DP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/ok" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/re_wheelpicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/DIMEN_10DP">

        <com.itboye.pondteam.custom.wheelview.view.WheelPicker
            android:id="@+id/number_picker1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            aigestudio:wheel_atmospheric="true"
            aigestudio:wheel_curved="true"
            aigestudio:wheel_cyclic="false"
            aigestudio:wheel_item_align="center"
            aigestudio:wheel_item_text_color="#A7A7DB"
            aigestudio:wheel_indicator="true"
            aigestudio:wheel_indicator_color="@color/black"
            aigestudio:wheel_indicator_size="1dp"
            aigestudio:wheel_item_text_size="24sp"
            aigestudio:wheel_selected_item_text_color="#536D8A" />
        <com.itboye.pondteam.custom.wheelview.view.WheelPicker
            android:id="@+id/number_picker2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_5DP"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/number_picker1"
            aigestudio:wheel_atmospheric="true"
            aigestudio:wheel_curved="true"
            aigestudio:wheel_cyclic="false"
            aigestudio:wheel_item_align="center"
            aigestudio:wheel_item_text_color="#A7A7DB"
            aigestudio:wheel_item_text_size="24sp"
            aigestudio:wheel_indicator="true"
            aigestudio:wheel_indicator_color="@color/black"
            aigestudio:wheel_indicator_size="1dp"
            aigestudio:wheel_selected_item_text_color="#536D8A" />
    </LinearLayout>
</RelativeLayout>